@@ -1,5 +1,8 @@
 2015-04-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/resource.c (InitializeMagickResources): Silence Coverity
+	10101 "Logically dead code".
+
 	* magick/magick.c (MagickSignalHandlerMessage): Fix Coverity 44725
 	"Logically dead code".
 
